Bug 424098 - Closed Accounts not hidden on Home view
Summary: Closed Accounts not hidden on Home view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.0
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-11 11:45 UTC by Mark Medoff
Modified: 2020-07-19 13:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
attachment-27522-0.html (1.73 KB, text/html)
2020-07-11 19:08 UTC, Mark Medoff
Details
Gift Cards (closed).png (43.99 KB, image/png)
2020-07-12 10:25 UTC, Mark Medoff
Details
Gift Cards (show on Home Preferred Accounts)).png (31.97 KB, image/png)
2020-07-12 10:25 UTC, Mark Medoff
Details
kmymoneyrc.png (32.42 KB, image/png)
2020-07-12 10:25 UTC, Mark Medoff
Details
Latest Version.png (43.22 KB, image/png)
2020-07-12 10:37 UTC, Mark Medoff
Details
No SHOW ALL ACCONTS.png (38.54 KB, image/png)
2020-07-12 10:37 UTC, Mark Medoff
Details
attachment-27000-0.html (1.31 KB, text/html)
2020-07-12 12:23 UTC, Mark Medoff
Details
attachment-9337-0.html (1.35 KB, text/html)
2020-07-12 20:29 UTC, Mark Medoff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Medoff 2020-07-11 11:45:42 UTC
SUMMARY
Cannot hide closed accounts

STEPS TO REPRODUCE
1. In SETTINGS -> Configure KMM, I select to hide closed accounts.
2. In ACCOUNTS, I set an asset account to CLOSED
3. HOME screen still shows the account. ACCOUNTS screen shows account with CLOSED indicator

OBSERVED RESULT
Closed account is not removed from Home view

EXPECTED RESULT
Closed account should be removed from Home view

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
This worked properly in last version 5.0.8
Comment 1 Jack 2020-07-11 16:20:26 UTC
I can't get KMM 5.1 (Atrix Linux) to show any closed account on the Home View at all.  

Which section  is showing the closed account?  Does it still do so after closing and restarting KMyMoney?

Can you produce a .kmy file which shows the problem, and which you can attach to the bug?
Comment 2 Mark Medoff 2020-07-11 19:08:02 UTC
Created attachment 130047 [details]
attachment-27522-0.html

Yes, happens after closing and restarting.

I will send some screen shots tomorrow when I am at that computer again.

Mark

On Sat, Jul 11, 2020, 12:20 PM Jack <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=424098
>
> Jack <ostroffjh@users.sourceforge.net> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>          Resolution|---                         |WAITINGFORINFO
>              Status|REPORTED                    |NEEDSINFO
>
> --- Comment #1 from Jack <ostroffjh@users.sourceforge.net> ---
> I can't get KMM 5.1 (Atrix Linux) to show any closed account on the Home
> View
> at all.
>
> Which section  is showing the closed account?  Does it still do so after
> closing and restarting KMyMoney?
>
> Can you produce a .kmy file which shows the problem, and which you can
> attach
> to the bug?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Thomas Baumgart 2020-07-12 09:34:09 UTC
I tried to duplicate this using current 5.1.0 and find exactly the opposite:

a) closed accounts are always shown in the accounts view no matter what the setting of the filter is

b) closed accounts are not shown on the Home Page. Changing between closed and open is immediately reflected on the home page, no need to restart the application or reload the file.

Weird.
Comment 4 Thomas Baumgart 2020-07-12 09:40:38 UTC
a) is caused by the "View/Show all accounts" being active. Turning that off causes closed accounts to disappear in the accounts view.
Comment 5 Thomas Baumgart 2020-07-12 10:22:43 UTC
Git commit 6e078d9583783b37efca240dee900f9618045605 by Thomas Baumgart.
Committed on 12/07/2020 at 10:22.
Pushed by tbaumgart into branch '5.1'.

Harmonize display of closed accounts in home view

Different sections of the home view displayed closed accounts depending
of the "Show all accounts" and "Do not show closed accounts"
differently. The handling has been harmonized such that closed accounts
will be displayed in all sections alike either if "Show all accounts" is
active or "Don't show closed accounts" is inactive.

Closed accounts will also be shown in strike-through so that they can
easily be identified as closed.
FIXED-IN: 5.1.1

M  +13   -4    kmymoney/views/khomeview_p.h

https://invent.kde.org/office/kmymoney/commit/6e078d9583783b37efca240dee900f9618045605
Comment 6 Mark Medoff 2020-07-12 10:25:25 UTC
Created attachment 130057 [details]
Gift Cards (closed).png

Where is that setting, I can't find it.

I think I left out some information in bug report. Closed accounts are
hidden under Assets but still show in Preferred Accounts on Home view.

See attached screenshots in reference to asset account "Gift Cards"

Mark

On Sun, Jul 12, 2020 at 5:40 AM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424098
>
> --- Comment #4 from Thomas Baumgart <tbaumgart@kde.org> ---
> a) is caused by the "View/Show all accounts" being active. Turning that off
> causes closed accounts to disappear in the accounts view.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 7 Mark Medoff 2020-07-12 10:25:25 UTC
Created attachment 130058 [details]
Gift Cards (show on Home Preferred Accounts)).png
Comment 8 Mark Medoff 2020-07-12 10:25:25 UTC
Created attachment 130059 [details]
kmymoneyrc.png
Comment 9 Mark Medoff 2020-07-12 10:37:57 UTC
Created attachment 130060 [details]
Latest Version.png

I am using the latest version from Nightly Builds as per attached
screenshot and the closed account "Gift Cards" still shows in the Preferred
Accounts group.

Also attached is the screen shot of the option to hide closed accounts with
no option to show ALL accounts.

Mark

On Sun, Jul 12, 2020 at 6:22 AM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424098
>
> Thomas Baumgart <thb@net-bembel.de> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>    Version Fixed In|                            |5.1.1
>              Status|NEEDSINFO                   |RESOLVED
>       Latest Commit|                            |
> https://invent.kde.org/offi
>                    |
> |ce/kmymoney/commit/6e078d95
>                    |
> |83783b37efca240dee900f96180
>                    |                            |45605
>          Resolution|WAITINGFORINFO              |FIXED
>
> --- Comment #5 from Thomas Baumgart <thb@net-bembel.de> ---
> Git commit 6e078d9583783b37efca240dee900f9618045605 by Thomas Baumgart.
> Committed on 12/07/2020 at 10:22.
> Pushed by tbaumgart into branch '5.1'.
>
> Harmonize display of closed accounts in home view
>
> Different sections of the home view displayed closed accounts depending
> of the "Show all accounts" and "Do not show closed accounts"
> differently. The handling has been harmonized such that closed accounts
> will be displayed in all sections alike either if "Show all accounts" is
> active or "Don't show closed accounts" is inactive.
>
> Closed accounts will also be shown in strike-through so that they can
> easily be identified as closed.
> FIXED-IN: 5.1.1
>
> M  +13   -4    kmymoney/views/khomeview_p.h
>
>
> https://invent.kde.org/office/kmymoney/commit/6e078d9583783b37efca240dee900f9618045605
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 10 Mark Medoff 2020-07-12 10:37:57 UTC
Created attachment 130061 [details]
No SHOW ALL ACCONTS.png
Comment 11 Thomas Baumgart 2020-07-12 10:46:12 UTC
It's at the bottom of the view menu (requested long time ago by a user for fast(er) access than through the options dialog)
Comment 12 Mark Medoff 2020-07-12 12:23:51 UTC
Created attachment 130067 [details]
attachment-27000-0.html

Thanks for the fast response.
That works and gives the results I was looking for. Now when I close or
open the selected account it disappears or reappears on the Preferred
Accounts view as desired.

I would have never figured out the answer without your help. This would be
a little more intuitive if it was on the configure menu along with the hide
closed accounts check box.

Thanks again for your help,
Mark

On Sun, Jul 12, 2020 at 6:46 AM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424098
>
> --- Comment #11 from Thomas Baumgart <tbaumgart@kde.org> ---
> It's at the bottom of the view menu (requested long time ago by a user for
> fast(er) access than through the options dialog)
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 13 Thomas Baumgart 2020-07-12 19:04:39 UTC
In order to make this more intuitive in a future version, I opened an issue for it at https://invent.kde.org/office/kmymoney/-/issues/28
Comment 14 Mark Medoff 2020-07-12 20:29:04 UTC
Created attachment 130070 [details]
attachment-9337-0.html

Actually, I think the expected behavior is to show all accounts, by
default. The option should be to hide selected accounts based on specified
criteria.

I would probably understand what checking Show All Accounts would mean but
I would not know which accounts would be hidden if I unchecked it.

 Mark

On Sun, Jul 12, 2020, 3:04 PM Thomas Baumgart <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=424098
>
> --- Comment #13 from Thomas Baumgart <tbaumgart@kde.org> ---
> In order to make this more intuitive in a future version, I opened an
> issue for
> it at https://invent.kde.org/office/kmymoney/-/issues/28
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 15 Thomas Baumgart 2020-07-19 13:11:28 UTC
Git commit 1d83652ccae26406fc8c9093fd86112478e8e1de by Thomas Baumgart.
Committed on 19/07/2020 at 11:06.
Pushed by tbaumgart into branch 'master'.

Harmonize display of closed accounts in home view

Different sections of the home view displayed closed accounts depending
of the "Show all accounts" and "Do not show closed accounts"
differently. The handling has been harmonized such that closed accounts
will be displayed in all sections alike either if "Show all accounts" is
active or "Don't show closed accounts" is inactive.

Closed accounts will also be shown in strike-through so that they can
easily be identified as closed.

(cherry picked from commit 6e078d9583783b37efca240dee900f9618045605)

M  +13   -4    kmymoney/views/khomeview_p.h

https://invent.kde.org/office/kmymoney/commit/1d83652ccae26406fc8c9093fd86112478e8e1de